<resources>
    <string name="app_name">Verse Reader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="chapter_name">Chapter Name</string>
    <string name="select_a_book">Select a Book to Read:</string>
    <string name="select_a_chapter">Select a Chapter to Read:</string>
    <string name="books_of_john">Books of John</string>
    <string name="mark_as_read">Mark Read</string>
    <string name="chapter_progress">Current Progress:</string>
    <string name="swipe_to_continue">Swipe to Switch Chapter</string>
    <string name="first_john">I John</string>
    <string-array name="second_john">
        <item name="sjohn1"> The elder unto the elect lady and her children, whom I love in the truth; and not I only, but also all they that have known the truth; </item>
        <item name="sjohn2"> For the truth\'s sake, which dwelleth in us, and shall be with us for ever. </item>
        <item name="sjohn3"> Grace be with you, mercy, [and] peace, from God the Father, and from the Lord Jesus Christ, the Son of the Father, in truth and love. </item>
        <item name="sjohn4"> I rejoiced greatly that I found of thy children walking in truth, as we have received a commandment from the Father. </item>
        <item name="sjohn5"> And now I beseech thee, lady, not as though I wrote a new commandment unto thee, but that which we had from the beginning, that we love one another. </item>
        <item name="sjohn6"> And this is love, that we walk after his commandments. This is the commandment, That, as ye have heard from the beginning, ye should walk in it. </item>
        <item name="sjohn7"> For many deceivers are entered into the world, who confess not that Jesus Christ is come in the flesh. This is a deceiver and an antichrist. </item>
        <item name="sjohn8"> Look to yourselves, that we lose not those things which we have wrought, but that we receive a full reward. </item>
        <item name="sjohn9"> Whosoever transgresseth, and abideth not in the doctrine of Christ, hath not God. He that abideth in the doctrine of Christ, he hath both the Father and the Son. </item>
        <item name="sjohn10"> If there come any unto you, and bring not this doctrine, receive him not into [your] house, neither bid him God speed: </item>
        <item name="sjohn11"> For he that biddeth him God speed is partaker of his evil deeds. </item>
        <item name="sjohn12"> Having many things to write unto you, I would not [write] with paper and ink: but I trust to come unto you, and speak face to face, that our joy may be full. </item>
        <item name="sjohn13"> The children of thy elect sister greet thee. Amen.</item>
    </string-array>
    <string-array name="third_john">
        <item name="tjohn1"> The elder unto the wellbeloved Gaius, whom I love in the truth.</item>
        <item name="tjohn2"> Beloved, I wish above all things that thou mayest prosper and be in health, even as thy soul prospereth.</item>
        <item name="tjohn3"> For I rejoiced greatly, when the brethren came and testified of the truth that is in thee, even as thou walkest in the truth.</item>
        <item name="tjohn4"> I have no greater joy than to hear that my children walk in truth.</item>
        <item name="tjohn5"> Beloved, thou doest faithfully whatsoever thou doest to the brethren, and to strangers;</item>
        <item name="tjohn6"> Which have borne witness of thy charity before the church: whom if thou bring forward on their journey after a godly sort, thou shalt do well:</item>
        <item name="tjohn7"> Because that for his name\'s sake they went forth, taking nothing of the Gentiles.</item>
        <item name="tjohn8"> We therefore ought to receive such, that we might be fellowhelpers to the truth.</item>
        <item name="tjohn9"> I wrote unto the church: but Diotrephes, who loveth to have the preeminence among them, receiveth us not.</item>
        <item name="tjohn10"> Wherefore, if I come, I will remember his deeds which he doeth, prating against us with malicious words: and not content therewith, neither doth he himself receive the brethren, and forbiddeth them that would, and casteth them out of the church.</item>
        <item name="tjohn11"> Beloved, follow not that which is evil, but that which is good. He that doeth good is of God: but he that doeth evil hath not seen God.</item>
        <item name="tjohn12"> Demetrius hath good report of all men, and of the truth itself: yea, and we also bear record; and ye know that our record is true.</item>
        <item name="tjohn13"> I had many things to write, but I will not with ink and pen write unto thee:</item>
        <item name="tjohn14"> But I trust I shall shortly see thee, and we shall speak face to face. Peace be to thee. Our friends salute thee. Greet the friends by name.</item>
    </string-array>
    <string-array name="first_john_1">
        <item name="fjohn11">That which was from the beginning, which we have heard, which we have seen with our eyes, which we have looked upon, and our hands have handled, of the Word of life;</item>
        <item name="fjohn12">(For the life was manifested, and we have seen [it], and bear witness, and shew unto you that eternal life, which was with the Father, and was manifested unto us;)</item>
        <item name="fjohn13">That which we have seen and heard declare we unto you, that ye also may have fellowship with us: and truly our fellowship [is] with the Father, and with his Son Jesus Christ.</item>
        <item name="fjohn14">And these things write we unto you, that your joy may be full.</item>
        <item name="fjohn15">This then is the message which we have heard of him, and declare unto you, that God is light, and in him is no darkness at all.</item>
        <item name="fjohn16">If we say that we have fellowship with him, and walk in darkness, we lie, and do not the truth:</item>
        <item name="fjohn17">But if we walk in the light, as he is in the light, we have fellowship one with another, and the blood of Jesus Christ his Son cleanseth us from all sin.</item>
        <item name="fjohn18">If we say that we have no sin, we deceive ourselves, and the truth is not in us.</item>
        <item name="fjohn19">If we confess our sins, he is faithful and just to forgive us [our] sins, and to cleanse us from all unrighteousness.</item>
        <item name="fjohn110"> If we say that we have not sinned, we make him a liar, and his word is not in us.</item>
    </string-array>
    <string-array name="first_john_2">
        <item name="fjohn21"> My little children, these things write I unto you, that ye sin not. And if any man sin, we have an advocate with the Father, Jesus Christ the righteous:</item>
        <item name="fjohn22"> And he is the propitiation for our sins: and not for our\'s only, but also for [the sins of] the whole world.</item>
        <item name="fjohn23"> And hereby we do know that we know him, if we keep his commandments.</item>
        <item name="fjohn24"> He that saith, I know him, and keepeth not his commandments, is a liar, and the truth is not in him.</item>
        <item name="fjohn25"> But whoso keepeth his word, in him verily is the love of God perfected: hereby know we that we are in him.</item>
        <item name="fjohn26"> He that saith he abideth in him ought himself also so to walk, even as he walked.</item>
        <item name="fjohn27"> Brethren, I write no new commandment unto you, but an old commandment which ye had from the beginning. The old commandment is the word which ye have heard from the beginning.</item>
        <item name="fjohn28"> Again, a new commandment I write unto you, which thing is true in him and in you: because the darkness is past, and the true light now shineth.</item>
        <item name="fjohn29"> He that saith he is in the light, and hateth his brother, is in darkness even until now.</item>
        <item name="fjohn210"> He that loveth his brother abideth in the light, and there is none occasion of stumbling in him.</item>
        <item name="fjohn211"> But he that hateth his brother is in darkness, and walketh in darkness, and knoweth not whither he goeth, because that darkness hath blinded his eyes.</item>
        <item name="fjohn212"> I write unto you, little children, because your sins are forgiven you for his name\'s sake.</item>
        <item name="fjohn213"> I write unto you, fathers, because ye have known him [that is] from the beginning. I write unto you, young men, because ye have overcome the wicked one. I write unto you, little children, because ye have known the Father.</item>
        <item name="fjohn214"> I have written unto you, fathers, because ye have known him [that is] from the beginning. I have written unto you, young men, because ye are strong, and the word of God abideth in you, and ye have overcome the wicked one.</item>
        <item name="fjohn215"> Love not the world, neither the things [that are] in the world. If any man love the world, the love of the Father is not in him.</item>
        <item name="fjohn216"> For all that [is] in the world, the lust of the flesh, and the lust of the eyes, and the pride of life, is not of the Father, but is of the world.</item>
        <item name="fjohn217"> And the world passeth away, and the lust thereof: but he that doeth the will of God abideth for ever.</item>
        <item name="fjohn218"> Little children, it is the last time: and as ye have heard that antichrist shall come, even now are there many antichrists; whereby we know that it is the last time.</item>
        <item name="fjohn219"> They went out from us, but they were not of us; for if they had been of us, they would [no doubt] have continued with us: but [they went out], that they might be made manifest that they were not all of us.</item>
        <item name="fjohn220"> But ye have an unction from the Holy One, and ye know all things.</item>
        <item name="fjohn221"> I have not written unto you because ye know not the truth, but because ye know it, and that no lie is of the truth.</item>
        <item name="fjohn222"> Who is a liar but he that denieth that Jesus is the Christ? He is antichrist, that denieth the Father and the Son.</item>
        <item name="fjohn223"> Whosoever denieth the Son, the same hath not the Father: [(but) he that acknowledgeth the Son hath the Father also].</item>
        <item name="fjohn224"> Let that therefore abide in you, which ye have heard from the beginning. If that which ye have heard from the beginning shall remain in you, ye also shall continue in the Son, and in the Father.</item>
        <item name="fjohn225"> And this is the promise that he hath promised us, [even] eternal life.</item>
        <item name="fjohn226"> These [things] have I written unto you concerning them that seduce you.</item>
        <item name="fjohn227"> But the anointing which ye have received of him abideth in you, and ye need not that any man teach you: but as the same anointing teacheth you of all things, and is truth, and is no lie, and even as it hath taught you, ye shall abide in him.</item>
        <item name="fjohn228"> And now, little children, abide in him; that, when he shall appear, we may have confidence, and not be ashamed before him at his coming.</item>
        <item name="fjohn229"> If ye know that he is righteous, ye know that every one that doeth righteousness is born of him.</item>
    </string-array>
</resources>