<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/title_border">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:id="@+id/bookNameTitle"
        android:text="@string/books_of_john"
        android:gravity="center"
        android:background="@drawable/title_border"
        android:textColor="#FFFFFF"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/selectAChapter"
        android:text="@string/select_a_book"
        android:gravity="center"
        android:background="@drawable/title_border"
        android:layout_below="@+id/bookNameTitle"
        android:padding="4dp"
        android:textColor="#FFFFFF"/>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:id="@+id/chapterFragmentHolder"
        android:layout_below="@+id/selectAChapter"
        android:layout_above="@+id/buttonSJohn">
    </FrameLayout>
    <Button
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:text="@string/first_john"
        android:id="@+id/buttonFJohn"
        android:layout_alignParentBottom="true"/>
    <Button
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:text="@string/second_john"
        android:id="@+id/buttonSJohn"
        android:layout_toRightOf="@+id/buttonFJohn"
        android:layout_toEndOf="@+id/buttonFJohn"
        android:layout_alignParentBottom="true" />
    <Button
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:text="@string/third_john"
        android:id="@+id/buttonTJohn"
        android:layout_toRightOf="@+id/buttonSJohn"
        android:layout_toEndOf="@+id/buttonSJohn"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
